= Runt Changelog

== Version 0.7.0

* Fixed usage of deprecated methods in Date when accessing them from PDate subclass 

* Applied patches providing week precision and expanded RFC2445 compliance tests contributed by Larry Karnowski

* Fixed bug #19982: REYear will match day in any month if @same_month_dates_provided with patch submitted by Riley Lynch

== Version 0.6.0

* Refactored and improved temporal expression tests, moving them to separate files per class

* Fixed bug #5741: REYear incorrect handling of default args

* Fixed bug #5749: Fixed spans midnight for REDay (Revision 156), changed semantics when dealing with lower precision arguments

* Fixed bug #10640: incorrect tutorial section for tutorial_te.rdoc

* Fixed bug #10605: DateRange.empty? should be true for min == max

* Finished Schedule API tutorial

* Fixed bug #16143: Typo in Schedule RDoc

* Added README (and related files) in the generated rdoc

== Version 0.5.0

* Refactored Schedule implementation which greatly simplifies customization but does potentially break existing clients who relied on the ability to call add mulitple times (SEE BELOW)

* Added update method to Schedule allowing clients to update existing expressions

* Added select method to Schedule allowing clients to query Events using arbitrary criteria   

* Added events method to Schedule which returns an Array of the currrently held Events   

* Added time-related shortcuts to Runt module contributed by Ara T. Howard

* Added ability to work with Time class contributed by Paul Wright

* Implemented meaningful to_s methods for TExpr classes

* Added include? method to Standard Library Date class allowing Spec class better interaction with other expressions

* Applied patch to fix PDate serialization bug contributed by Jodi Showers

* Added BeforeTE, AfterTE, enhanced TExpr#dates method, RFC2445 (iCalendar) compliance unit test, contributed by Larry Karnowski
